Prevent horizontal scrollbar from appearing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,6 +14,7 @@ body {
   font-weight: 600;
   height: 100%;
   margin: auto;
+  overflow: hidden;
   padding: 50px;
   text-transform: uppercase;
 }
